samples/_failures_safe/1761467227_c244d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ed157df.c: In function ‘main’:
./samples/SAFE/__tmp_3ed157df.c:177:12: error: missing terminating " character
  177 |     printf("----
      |            ^~~~~
./samples/SAFE/__tmp_3ed157df.c:177:5: error: expected expression at end of input
  177 |     printf("----
      |     ^~~~~~
./samples/SAFE/__tmp_3ed157df.c:177:5: error: expected declaration or statement at end of input
